--- a/Rendu.ipynb
+++ b/Rendu.ipynb
@@ -9,8 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ab380b8-a1ca-47e2-9000-8f2c1e6f6889",
+   "metadata": {},
+   "source": [
+    "Lecture du jeux de données avec `Pandas` en faisant attention au séparateur \";\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "c04bfede-1359-4a28-a3ff-4103e01c7ba8",
    "metadata": {},
    "outputs": [],
@@ -20,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "f4761fe9-bd0a-4c23-899f-cc11b8b71e3c",
    "metadata": {},
    "outputs": [],
@@ -30,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "0d11ab54-595c-4cad-9d09-6894bb4e72eb",
    "metadata": {},
    "outputs": [
@@ -149,7 +157,7 @@
        "4  Porte-monnaie / portefeuille, argent, titres          Objet trouvé  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,8 +200,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa52f1a1-6124-4c58-84f7-a9744fa6365c",
+   "metadata": {},
+   "source": [
+    "La dimension du jeux de données est comme suit :"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "01540ba4-4630-4154-a96e-e934b9f6b3d9",
    "metadata": {},
    "outputs": [
@@ -201,7 +217,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La dimension du jeux de données est comme suit :\n",
       "---------\n",
       "Lignes : 460000\n",
       "Colonnes : 7\n"
@@ -209,7 +224,6 @@
     }
    ],
    "source": [
-    "print(\"La dimension du jeux de données est comme suit :\")\n",
     "print(\"---\"*3)\n",
     "print(f\"Lignes : {df.shape[0]}\")\n",
     "print(f\"Colonnes : {df.shape[1]}\")"
@@ -228,12 +242,17 @@
    "id": "1c488fa1-98f7-4c87-ba6e-f6aa78764ce8",
    "metadata": {},
    "source": [
-    "#### 3.1 - Données de type date"
+    "#### 3.1 - Données de type date\n",
+    "Les colonnes : \n",
+    "- Dates\n",
+    "- Date et heure de restitution\n",
+    "\n",
+    "Sont des dates conservé dans des éléments de types object. Il nécessite une conversion pour voir l'étendu entre les dates (plus ancien et plus récent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "f92ffa7a-f768-43e3-b786-96c0f13c3bcf",
    "metadata": {},
    "outputs": [],
@@ -244,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "56aca831-c9be-475b-8bf4-09f9b4f2a1ea",
    "metadata": {},
    "outputs": [],
@@ -254,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "0e0122c8-b343-4f80-9efa-3fa78b2ebaa3",
    "metadata": {},
    "outputs": [
@@ -271,7 +290,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,8 +300,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c57771a1-1af0-4c69-89a5-fd75a4af8cff",
+   "metadata": {},
+   "source": [
+    "**Colonne Date : Les dates courent entre 2017 et 2024** "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "id": "7a2d5f16-347c-4ce9-915a-a3b70a2bf022",
    "metadata": {},
    "outputs": [
@@ -296,9 +323,36 @@
     }
    ],
    "source": [
-    "# Répartitions des dates\n",
     "print(df.Date.min())\n",
     "print(df.Date.max())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d4d53ac-533e-4043-8274-439aea6494bc",
+   "metadata": {},
+   "source": [
+    "**Colonne Date et heure de restitution : Les dates courent entre 2017 et 2024** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7db2e7c3-3819-4140-ac5c-9e0f770eb0d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017-12-03 12:38:53+00:00\n",
+      "2024-09-14 11:02:10+00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[\"Date et heure de restitution\"].min())\n",
+    "print(df[\"Date et heure de restitution\"].max())"
    ]
   },
   {
@@ -306,12 +360,13 @@
    "id": "8da83b9f-a77d-44b8-a897-c65a6bce18be",
    "metadata": {},
    "source": [
-    "#### 3.1 - Données catégoriels"
+    "#### 3.1 - Données catégoriels\n",
+    "- Le Type d'enregistrement est un données catégoriel enregistré dans entant que object. elle ne contient qu'un la chaine de caractère \"Objet trouvé\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "8e0a6e67-e4f8-46c9-93f8-2581fb07a998",
    "metadata": {},
    "outputs": [
@@ -319,27 +374,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "voici toute les gares: \n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
+      "['Objet trouvé']\n",
+      "1\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[None, None, None, None]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"voici toute les gares: \")\n",
-    "[print(i) for i in list(range(1, 5))]"
+    "print(df[\"Type d'enregistrement\"].unique())\n",
+    "print(df[\"Type d'enregistrement\"].nunique())"
    ]
   },
   {
@@ -347,21 +389,100 @@
    "id": "9fd8e05f-83b9-4578-b384-1b6dd6bc3655",
    "metadata": {},
    "source": [
-    "#### 3.2 - Données numériques"
+    "#### 3.2 - Données numériques\n",
+    "Code UIC est les données de type float64 sa répartition est entre (87111849.0 minimum et 87784009.0 maximum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d3512955-9344-44a7-a2aa-37b05e045e85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Code UIC\"].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ec0fe325-8a50-4575-862e-cf8416b06576",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87111849.0\n",
+      "87784009.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[\"Code UIC\"].min())\n",
+    "print(df[\"Code UIC\"].max())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a66cd064-51f4-40a7-9040-bc6e0cadba74",
+   "metadata": {},
+   "source": [
+    "## 4 - Affichage des données nulls par colonnes\n",
+    ">Affiche le nom de colonnes et le nombres de données nulls (n'affiche que les nulls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9888db6c-a739-476e-85e3-874ac3799758",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date et heure de restitution : 262303\n",
+      "Gare : 139\n",
+      "Code UIC : 139\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cols in df.columns:\n",
+    "    if df[cols].isna().sum() > 0:\n",
+    "        print(f\"{cols} : {df[cols].isna().sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3c06066-650c-4d11-9095-ec64983f2388",
+   "metadata": {},
+   "source": [
+    "Résumé : \n",
+    "Les colonnes contenant des donnée nulls sont : \n",
+    "- Date et heure de restitution : 262303\n",
+    "- Gare : 139\n",
+    "- Code UIC : 139"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec0fe325-8a50-4575-862e-cf8416b06576",
+   "id": "3403d8f5-e9bc-4b78-b4b4-e6d5e7f6a079",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "625c884b-2c81-4e76-a285-1f1dcdf44411",
-   "metadata": {},
    "source": []
   }
  ],
