--- a/Rendu.ipynb
+++ b/Rendu.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "c04bfede-1359-4a28-a3ff-4103e01c7ba8",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "f4761fe9-bd0a-4c23-899f-cc11b8b71e3c",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "0d11ab54-595c-4cad-9d09-6894bb4e72eb",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "4  Porte-monnaie / portefeuille, argent, titres          Objet trouvé  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "01540ba4-4630-4154-a96e-e934b9f6b3d9",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "f92ffa7a-f768-43e3-b786-96c0f13c3bcf",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "56aca831-c9be-475b-8bf4-09f9b4f2a1ea",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "0e0122c8-b343-4f80-9efa-3fa78b2ebaa3",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "7a2d5f16-347c-4ce9-915a-a3b70a2bf022",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "7db2e7c3-3819-4140-ac5c-9e0f770eb0d5",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "8e0a6e67-e4f8-46c9-93f8-2581fb07a998",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "8fa6da02-444e-4425-995e-7304984a58b2",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
+   "id": "dffceddf-f849-4b3c-8333-852b393ca5fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Voici toutes les gares présentes dans la catégorie \"Gare\" du Data Frame :\n",
+      "- Paris Montparnasse\n",
+      "- Strasbourg\n",
+      "- Saint-Étienne Châteaucreux\n",
+      "- Tourcoing\n",
+      "- La Rochelle\n",
+      "- Béziers\n",
+      "- Paris Gare de Lyon\n",
+      "- Lille Europe\n",
+      "- Annecy\n",
+      "- Nice\n",
+      "- Bordeaux Saint-Jean\n",
+      "- Toulouse Matabiau\n",
+      "- Nantes\n",
+      "- Paris Austerlitz\n",
+      "- Lyon Part Dieu\n",
+      "- Lyon Perrache\n",
+      "- Dunkerque\n",
+      "- Montpellier Saint-Roch\n",
+      "- Paris Est\n",
+      "- Hendaye\n",
+      "- Amiens\n",
+      "- Rennes\n",
+      "- Arras\n",
+      "- Paris Gare du Nord\n",
+      "- Marseille Saint-Charles\n",
+      "- Nancy\n",
+      "- Mantes-la-Jolie\n",
+      "- Compiègne\n",
+      "- Brest\n",
+      "- Paris Bercy\n",
+      "- Granville\n",
+      "- Paris Saint-Lazare\n",
+      "- Toulon\n",
+      "- Bellegarde\n",
+      "- Saint-Brieuc\n",
+      "- Aéroport Charles de Gaulle 2 TGV\n",
+      "- Limoges Bénédictins\n",
+      "- Agen\n",
+      "- Cherbourg\n",
+      "- Montpellier Sud de France\n",
+      "- Mulhouse\n",
+      "- Grenoble\n",
+      "- Aix-les-Bains le Revard\n",
+      "- Bayonne\n",
+      "- Nevers\n",
+      "- Tours\n",
+      "- Tarbes\n",
+      "- Poitiers\n",
+      "- Saint-Nazaire\n",
+      "- Lens\n",
+      "- Rouen Rive Droite\n",
+      "- Massy TGV\n",
+      "- Metz Ville\n",
+      "- Chambéry - Challes-les-Eaux\n",
+      "- Quimper\n",
+      "- Clermont-Ferrand\n",
+      "- Angers Saint-Laud\n",
+      "- Remiremont\n",
+      "- Le Havre\n",
+      "- Aix-en-Provence TGV\n",
+      "- Châteauroux\n",
+      "- Laroche - Migennes\n",
+      "- Avignon TGV\n",
+      "- Libourne\n",
+      "- Orléans\n",
+      "- Douai\n",
+      "- Colmar\n",
+      "- Saint-Gervais-les-Bains Le Fayet\n",
+      "- Valence\n",
+      "- Pau\n",
+      "- Lorient Bretagne Sud\n",
+      "- Bourges\n",
+      "- Saint-Pierre-des-Corps\n",
+      "- Caen\n",
+      "- Dijon\n",
+      "- Dax\n",
+      "- Épinal\n",
+      "- Saint-Quentin\n",
+      "- Saverne\n",
+      "- Hazebrouck\n",
+      "- Vierzon\n",
+      "- Le Mans\n",
+      "- Niort\n",
+      "- Boulogne Ville\n",
+      "- Marne-la-Vallée Chessy\n",
+      "- Les Aubrais\n",
+      "- Nîmes\n",
+      "- Besançon Viotte\n",
+      "- Brive-la-Gaillarde\n",
+      "- Évreux Normandie\n",
+      "- Cannes\n",
+      "- Beauvais\n",
+      "- Reims\n",
+      "- Valence TGV Rhône-Alpes Sud\n",
+      "- Narbonne\n",
+      "- Angoulême\n",
+      "- nan\n",
+      "- Perpignan\n",
+      "- Laval\n",
+      "- Saint-Malo\n",
+      "- Creil\n",
+      "- Blois - Chambord\n",
+      "- Conflans-Sainte-Honorine\n",
+      "- Chartres\n",
+      "- Belfort - Montbéliard TGV\n",
+      "- Bourg-Saint-Maurice\n",
+      "- Sélestat\n",
+      "- Dieppe\n",
+      "- Briançon\n",
+      "- Marmande\n",
+      "- Haguenau\n",
+      "- Morlaix\n",
+      "- La Roche-sur-Yon\n",
+      "- Saint-Dié-des-Vosges\n",
+      "- Saintes\n",
+      "- Le Croisic\n",
+      "- Charleville-Mézières\n",
+      "- Arcachon\n",
+      "- Calais - Fréthun\n",
+      "- Carcassonne\n",
+      "- Ambérieu-en-Bugey\n",
+      "- Vannes\n",
+      "- Troyes\n",
+      "- Laon\n",
+      "- Valenciennes\n",
+      "- Argentan\n",
+      "- Vernon\n",
+      "- Châlons-en-Champagne\n",
+      "- Annemasse\n",
+      "- Lisieux\n",
+      "- Thionville\n",
+      "- Périgueux\n",
+      "- Belfort\n",
+      "- Saint-Lô\n",
+      "- Montauban Ville Bourbon\n",
+      "- Lunéville\n",
+      "- Châtellerault\n",
+      "- Trouville - Deauville\n",
+      "- Royan\n",
+      "- Auray\n",
+      "- Roanne\n",
+      "- Bourg-en-Bresse\n",
+      "- Montluçon\n",
+      "- Calais Ville\n",
+      "- Abbeville\n",
+      "- Moûtiers - Salins - Brides-les-Bains\n",
+      "- Vichy\n",
+      "- Évian-les-Bains\n",
+      "- Guingamp\n",
+      "- Mâcon\n",
+      "- Avignon Centre\n",
+      "- Aulnoye-Aymeries\n",
+      "- Riom - Châtel-Guyon\n",
+      "- Modane\n",
+      "- Elbeuf - Saint-Aubin\n",
+      "- Maubeuge\n",
+      "- Lourdes\n",
+      "- Béthune\n",
+      "- Redon\n",
+      "- Bergerac\n",
+      "- Étaples - Le Touquet\n",
+      "- Nîmes Pont du Gard\n",
+      "- Moulins sur Allier\n",
+      "- Argenteuil\n",
+      "- Chalon-sur-Saône\n",
+      "- Saint-Cloud\n",
+      "- Yvetot\n",
+      "- Coutances\n",
+      "- Sarrebourg\n",
+      "- Cambrai\n",
+      "- Alençon\n",
+      "---------\n",
+      "Voici le nombre de gare total : 170\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Voici toutes les gares présentes dans la catégorie \"Gare\" du Data Frame :')\n",
+    "# Pour afficher et enlever la liste dans le print. Compréhension de liste.\n",
+    "[print(f\"- {gare}\") for gare in gare_unique]\n",
+    "print(\"---\"*3)\n",
+    "print(f'Voici le nombre de gare total : {nb_gare_unique}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "54c4d7b2-60b6-461e-834d-af5dfc19217c",
    "metadata": {},
    "outputs": [
@@ -441,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "a151d528-ef39-4cae-881c-c836386cb6a4",
    "metadata": {},
    "outputs": [
@@ -477,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "d3512955-9344-44a7-a2aa-37b05e045e85",
    "metadata": {},
    "outputs": [
@@ -487,7 +682,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "ec0fe325-8a50-4575-862e-cf8416b06576",
    "metadata": {},
    "outputs": [
@@ -517,61 +712,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "91bf94c0-75dd-4b92-949f-759b1b5294e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m nb_gare_unique \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGare\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mnunique()\n\u001b[1;32m      2\u001b[0m gare_unique \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGare\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39munique()\n\u001b[1;32m      3\u001b[0m nb_Nature_objets \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNature d\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobjets\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mnunique()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "nb_gare_unique = df[\"Gare\"].nunique()\n",
-    "gare_unique = df[\"Gare\"].unique()\n",
-    "nb_Nature_objets = df[\"Nature d'objets\"].nunique()\n",
-    "nature_objet_unique = df[\"Nature d\\'objets\"].unique()\n",
-    "nb_type_objets = df[\"Type d\\'objets\"].nunique()\n",
-    "type_obj_unique = df[\"Type d\\'objets\"].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b1c8048-8dd0-4c53-a0c1-c0d6ce635979",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Voici toutes les gares présentes dans la catégorie \"Gare\" du Data Frame :')\n",
-    "# Pour afficher et enlever la liste dans le print. Compréhension de liste.\n",
-    "[print(f\"- {gare}\") for gare in gare_unique]\n",
-    "print(\"---\"*3)\n",
-    "print(f'Voici le nombre de gare total : {nb_gare_unique}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3cba0e3f-0279-4d42-bd30-c5c71e5f2dea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Voici toutes les natures des objets présentes dans la catégorie \"Nature Objet\" du Data Frame :')\n",
-    "# Pour afficher et enlever la liste dans le print. Compréhension de liste.\n",
-    "[print(f\"- {nature_objet}\") for nature_objet in nature_objet_unique]\n",
-    "print(\"---\"*3)\n",
-    "print(f'Voici le nombre de gare total : {nb_Nature_objets}')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a66cd064-51f4-40a7-9040-bc6e0cadba74",
    "metadata": {},
@@ -582,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "id": "9888db6c-a739-476e-85e3-874ac3799758",
    "metadata": {},
    "outputs": [
@@ -645,14 +785,6 @@
     "#### 5.2 - Cas d'usage avec un autre fichier : \n",
     "Est ce que les objets déclarés trouvés sont dans les objets déclarés perdus."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44b9e202-e25d-4120-98e4-0488f46cd466",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
