--- a/Rendu.ipynb
+++ b/Rendu.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "c04bfede-1359-4a28-a3ff-4103e01c7ba8",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "f4761fe9-bd0a-4c23-899f-cc11b8b71e3c",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "0d11ab54-595c-4cad-9d09-6894bb4e72eb",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "4  Porte-monnaie / portefeuille, argent, titres          Objet trouvé  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "01540ba4-4630-4154-a96e-e934b9f6b3d9",
    "metadata": {},
    "outputs": [
@@ -245,25 +245,67 @@
     "#### 3.1 - Données de type date\n",
     "Les colonnes : \n",
     "- Dates\n",
-    "- Date et heure de restitution\n",
-    "\n",
-    "Sont des dates conservé dans des éléments de types object. Il nécessite une conversion pour voir l'étendu entre les dates (plus ancien et plus récent)"
+    "- Date et heure de restitution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac71224a-9208-489c-9c2e-3ee6a3a834da",
+   "metadata": {},
+   "source": [
+    "Afficher les types de données  des colonnes dates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
+   "id": "0c7a4283-aaf7-4176-a531-c611dc8faacd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date : object\n",
+      "Date et heure de restitution : object\n"
+     ]
+    }
+   ],
+   "source": [
+    "dates = df[[\"Date\", \"Date et heure de restitution\"]]\n",
+    "for cols in dates:\n",
+    "    print(f\"{cols} : {dates[cols].dtypes}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d028d2a4-f569-422b-b1ed-e5f28fcbc1b8",
+   "metadata": {},
+   "source": [
+    "Sont des dates conservé dans des éléments de types `object`. Il nécessite une conversion pour voir l'étendu entre les dates (plus ancien et plus récent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "068cc444-4838-42d8-8dc0-63d965720178",
+   "metadata": {},
+   "source": [
+    "**Conversion des données dates**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "f92ffa7a-f768-43e3-b786-96c0f13c3bcf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Conversion date\n",
     "df[\"Date\"] = pd.to_datetime(df[\"Date\"], utc=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "56aca831-c9be-475b-8bf4-09f9b4f2a1ea",
    "metadata": {},
    "outputs": [],
@@ -273,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "0e0122c8-b343-4f80-9efa-3fa78b2ebaa3",
    "metadata": {},
    "outputs": [
@@ -290,7 +332,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +403,7 @@
    "metadata": {},
    "source": [
     "#### 3.1 - Données catégoriels\n",
-    "- Le Type d'enregistrement est un données catégoriel enregistré dans entant que object. elle ne contient qu'un la chaine de caractère \"Objet trouvé\""
+    "- Le Type d'enregistrement est un données catégoriel enregistré dans entant que `object`. elle ne contient qu'un la chaine de caractère \"Objet trouvé\""
    ]
   },
   {
@@ -397,6 +439,14 @@
     "nature_objet_unique = df[\"Nature d\\'objets\"].unique()\n",
     "nb_type_objets = df[\"Type d\\'objets\"].nunique()\n",
     "type_obj_unique = df[\"Type d\\'objets\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b15ef8b4-2f08-44f2-9e97-c8d489df5e14",
+   "metadata": {},
+   "source": [
+    "Gare correspond à `object` "
    ]
   },
   {
